--- a/ConfigurationServer/build.gradle
+++ b/ConfigurationServer/build.gradle
@@ -29,7 +29,7 @@ ext {
 
 dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	compile('org.springframework.cloud:spring-cloud-config-server')
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-config-server', version: '2.0.1.RELEASE'
 	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka', version: '1.4.5.RELEASE'
 }
 
