--- a/Gateway/build.gradle
+++ b/Gateway/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka', version: '1.4.5.RELEASE'
 	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-zuul', version: '1.4.5.RELEASE'
 	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '2.0.1.RELEASE'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.0.4.RELEASE'
+	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
 }
 
