[added root project]

--- a/ConfigurationServer/src/main/resources/application.properties
+++ b/ConfigurationServer/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8989
 spring.application.name=config
 
-spring.cloud.config.server.git.uri=file:///${user.home}\\Documents\\InjellijWorkSpace\\application-config
-#spring.cloud.config.server.git.uri=https://github.com/AbhiJD9602/application-config.git
+#spring.cloud.config.server.git.uri=file:///${user.home}\\Documents\\InjellijWorkSpace\\application-config
+spring.cloud.config.server.git.uri=https://github.com/AbhiJD9602/application-config.git
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds = 5
