--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,6 @@ rootProject.name = 'SpringCloud'
 include 'AuthenticationServer'
 include 'BookService'
 include 'ConfigurationServer'
-include 'Discovery'
+include 'DiscoveryServer'
 include 'Gateway'
 include 'RatingService'
